@@ -10,6 +10,7 @@ using System;
 #region Foo
 class Foo
 {
+    
     void Create() {}
 }
 #endregion Foo
