@@ -15,6 +15,8 @@ DATE 0x/0x/2008
 NEWS:
 
 NEW: [features/improvements]
++Improved auto-indent functionality for (C, CPP, D, Objective C, C#, Pike, Java,
+ JavaScript, ActionScript, Vala, haXe, Ferite, PHP).
 +Show Filetype and Encoding information in statusbar
 +Add support for newLISP (from Jeff)
 +Add Czech translation (contributed by Tomas Fryda)
